// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"moduleStyle" option should work with "cjs" 1`] = `
"// This file was generated by lezer-generator. You probably shouldn't edit it.
module.exports = {
  LineComment: 1,
  Program: 2,
  Identifier: 3,
  String: 4,
  Boolean: 5
}
// This file was generated by lezer-generator. You probably shouldn't edit it.
const {LRParser} = require("@lezer/lr")
exports.parser = LRParser.deserialize({
  version: 14,
  states: "!WQYQPOOOhQPO'#CdOOQO'#Ci'#CiOOQO'#Ce'#CeQYQPOOOOQO,59O,59OOyQPO,59OOOQO-E6c-E6cOOQO1G.j1G.j",
  stateData: "![~O[OSPOS~ORQOSQOTQOVPO~ORQOSQOTQOUTOVPO~ORQOSQOTQOUWOVPO~O",
  goto: "u^PPPPPPPP_ePPPoXQOPSUQSOQUPTVSUXROPSU",
  nodeNames: "⚠ LineComment Program Identifier String Boolean ) ( Application",
  maxTerm: 13,
  nodeProps: [
    ["openedBy", 6,"("],
    ["closedBy", 7,")"]
  ],
  skippedNodes: [0,1],
  repeatNodeCount: 1,
  tokenData: "%c~R^XY}YZ}]^}pq}rs!\`st#|xy$[yz$a}!O$f!Q![$f!]!^$z!c!}$f#R#S$f#T#o$f~!SS[~XY}YZ}]^}pq}~!cVOr!\`rs!xs#O!\`#O#P!}#P;'S!\`;'S;=\`#v<%lO!\`~!}OS~~#QRO;'S!\`;'S;=\`#Z;=\`O!\`~#^WOr!\`rs!xs#O!\`#O#P!}#P;'S!\`;'S;=\`#v;=\`<%l!\`<%lO!\`~#yP;=\`<%l!\`~$PQ#Y#Z$V#h#i$V~$[OT~~$aOV~~$fOU~~$kTR~}!O$f!Q![$f!c!}$f#R#S$f#T#o$f~%PSP~OY$zZ;'S$z;'S;=\`%]<%lO$z~%\`P;=\`<%l$z",
  tokenizers: [0],
  topRules: {"Program":[0,2]},
  tokenPrec: 0
})
"
`;

exports[`"moduleStyle" option should work with "es" 1`] = `
"// This file was generated by lezer-generator. You probably shouldn't edit it.
export const
  LineComment = 1,
  Program = 2,
  Identifier = 3,
  String = 4,
  Boolean = 5

// This file was generated by lezer-generator. You probably shouldn't edit it.
import {LRParser} from "@lezer/lr"
export const parser = LRParser.deserialize({
  version: 14,
  states: "!WQYQPOOOhQPO'#CdOOQO'#Ci'#CiOOQO'#Ce'#CeQYQPOOOOQO,59O,59OOyQPO,59OOOQO-E6c-E6cOOQO1G.j1G.j",
  stateData: "![~O[OSPOS~ORQOSQOTQOVPO~ORQOSQOTQOUTOVPO~ORQOSQOTQOUWOVPO~O",
  goto: "u^PPPPPPPP_ePPPoXQOPSUQSOQUPTVSUXROPSU",
  nodeNames: "⚠ LineComment Program Identifier String Boolean ) ( Application",
  maxTerm: 13,
  nodeProps: [
    ["openedBy", 6,"("],
    ["closedBy", 7,")"]
  ],
  skippedNodes: [0,1],
  repeatNodeCount: 1,
  tokenData: "%c~R^XY}YZ}]^}pq}rs!\`st#|xy$[yz$a}!O$f!Q![$f!]!^$z!c!}$f#R#S$f#T#o$f~!SS[~XY}YZ}]^}pq}~!cVOr!\`rs!xs#O!\`#O#P!}#P;'S!\`;'S;=\`#v<%lO!\`~!}OS~~#QRO;'S!\`;'S;=\`#Z;=\`O!\`~#^WOr!\`rs!xs#O!\`#O#P!}#P;'S!\`;'S;=\`#v;=\`<%l!\`<%lO!\`~#yP;=\`<%l!\`~$PQ#Y#Z$V#h#i$V~$[OT~~$aOV~~$fOU~~$kTR~}!O$f!Q![$f!c!}$f#R#S$f#T#o$f~%PSP~OY$zZ;'S$z;'S;=\`%]<%lO$z~%\`P;=\`<%l$z",
  tokenizers: [0],
  topRules: {"Program":[0,2]},
  tokenPrec: 0
})
"
`;
